Renamed many files to maintain consistency

--- a/app/src/main/res/layout/activity_SetChildPhone.xml
+++ b/app/src/main/res/layout/activity_SetChildPhone.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.brogrammers.the.parenty.usertypecheck">
+    tools:context="com.brogrammers.the.parenty.SetChildPhone">
 
     <LinearLayout
         android:id="@+id/layout_otp"
