--- a/app/src/main/res/layout/activity_Login.xml
+++ b/app/src/main/res/layout/activity_Login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.brogrammers.the.parenty.login">
+    tools:context="com.brogrammers.the.parenty.Login">
 
     <ScrollView
         android:layout_width="0dp"
