--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,17 +41,17 @@
 
 
             <EditText
-                android:id="@+id/et_email"
+                android:id="@+id/et_mobileno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:ems="10"
-                android:hint="Email"
+                android:hint="Mobile"
                 android:inputType="textEmailAddress"
                 android:textColorHighlight="@color/colorAccent" />
 
 
-            <EditText
+           <!-- <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -59,7 +59,17 @@
                 android:ems="10"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:textColorHighlight="@color/colorAccent" />
+                android:textColorHighlight="@color/colorAccent" />-->
+
+            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:textColorHighlight="@color/colorAccent"
+                />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -68,7 +78,7 @@
                 android:paddingBottom="5dp"
                 android:paddingTop="8dp">
 
-                <CheckBox
+                <!--<CheckBox
                     android:id="@+id/cb_showhide_pwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -76,7 +86,7 @@
                     android:text="Show password"
                     android:textColor="#000000"
                     android:textColorHighlight="@color/colorAccent"
-                    android:textSize="14sp" />
+                    android:textSize="14sp" />-->
 
                 <TextView
                     android:id="@+id/tv_forgot_password"
