--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
                 android:layout_marginTop="50dp"
                 android:ems="10"
                 android:hint="Mobile"
-                android:inputType="textEmailAddress"
+                android:inputType="number"
                 android:textColorHighlight="@color/colorAccent" />
 
 
@@ -78,15 +78,6 @@
                 android:paddingBottom="5dp"
                 android:paddingTop="8dp">
 
-                <!--<CheckBox
-                    android:id="@+id/cb_showhide_pwd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Show password"
-                    android:textColor="#000000"
-                    android:textColorHighlight="@color/colorAccent"
-                    android:textSize="14sp" />-->
 
                 <TextView
                     android:id="@+id/tv_forgot_password"
